commit "fix text-overflow - ellipsis"

--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -265,14 +265,14 @@
                             &:hover{
                             cursor: pointer;
                             transition: all .10s ease-in-out;
-                            background-clip: border-box;
+                            -webkit-background-clip: text;
                             font-weight: 900;
                             background-image: linear-gradient(145deg, $color-secondary-1 25%, $color-primary 75%);
-                            // -webkit-text-fill-color: transparent; 
+                            -webkit-text-fill-color: transparent; 
                             } 
                             &:active{
                             transition: all 60s;
-                            background-clip: text;
+                            -webkit-background-clip: text;
                             font-weight: 900;
                             background-image: linear-gradient(145deg, $color-secondary-1 25%, $color-primary 75%);
                             -webkit-text-fill-color: transparent; 
