--- a/sass/pages/_menu.scss
+++ b/sass/pages/_menu.scss
@@ -75,7 +75,7 @@
                                &:hover{
                                 cursor: pointer;
                                 transition: all .8s ease-in-out;
-                                background-clip: text;
+                                -webkit-background-clip: text;
                                 font-weight: 900;
                                 background-image: linear-gradient(85deg, $color-secondary-1 3%, $color-primary 97%);
                                 -webkit-text-fill-color: transparent; 
@@ -122,15 +122,15 @@
                                         flex-direction: row;
                                         gap: 1rem;   
                                         padding: 0.8rem 0.8rem 0.8rem 0.8rem;
+                                        padding-right: 0;
                                         box-shadow: 0rem 0.5rem 0.5rem rgba(0, 0, 0, 0.05);
                                         border-radius: 1.2rem 1.2rem 1.2rem 1.2rem;
+                                        overflow: hidden;
                                         @include bgc();
                                         &:hover{
                                             gap: 0.5rem;
                                             > .chosen{
-                                                margin: -0.8rem -1rem 0rem 0rem;
-                                                background: $resto-tag-color;
-                                                transition: margin 1000ms ease-in-out;
+                                                margin-right: 0;                                               
                                                 > .fa-solid {
                                                     color: $btn-text-color;
                                                     background: $resto-tag-color;
@@ -146,12 +146,17 @@
                                             display: grid;
                                             grid-template-columns: repeat(1, 1fr);
                                             gap: 0.3rem;
+                                            white-space: nowrap;
+                                            text-overflow: ellipsis;
+                                            overflow: hidden;
                                             > .item-heading{
                                                 font-family: $text-headings-font-family;
                                                 font-style: normal;
                                                 font-weight: 700;
                                                 font-size: 1rem;
                                                 line-height: 21px;  
+                                                text-overflow: ellipsis;
+                                                overflow: hidden;
                                             }
                                             > .item-content{
                                                 font-family: $text-headings-font-family;
@@ -159,6 +164,8 @@
                                                 font-weight: 300;
                                                 font-size: 0.9rem;
                                                 line-height: 19px;   
+                                                text-overflow: ellipsis;
+                                                overflow: hidden;
                                             }
                                         }
                                         > .item-price{
@@ -176,13 +183,16 @@
                                         > .chosen{
                                             width: 4rem;
                                             height: 158%;
-                                            background: transparent;
+                                            background: $resto-tag-color;
                                             display: flex;
                                             align-content: center;
                                             align-items: center;
-                                            margin: -0.8rem -2rem 0rem 0rem;
+                                            margin: -0.8rem -4rem 0rem 0rem;
+                                            margin-right: -4rem;
                                             z-index: 1;
                                             border-radius: 0rem 1.2rem 1.2rem 0rem;
+                                            transition: all 1000ms;
+
                                             > .fa-solid {
                                                 color: transparent;
                                                 background: transparent;
